--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "papaparse": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.5.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
     "web-vitals": "^2.1.4"
