--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^6.14.2",
+    "axios": "^1.9.0",
     "file-saver": "^2.0.5",
     "papaparse": "^5.5.2",
     "react": "^18.2.0",
