--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
